--- a/tox.ini
+++ b/tox.ini
@@ -30,10 +30,6 @@ deps =
     ruff>=0,<1
     ataraxis-automation>=4,<5
     types-tqdm>=4,<5
-    types-tabulate>=0,<1
-    scipy-stubs>=1,<2
-    types-pynput>=1,<2
-    google-api-python-client-stubs>=1,<2
     types-appdirs>=1,<2
 basepython = py311
 commands =
@@ -52,15 +48,10 @@ deps =
     mypy>=1,<2
     ruff>=0,<1
     ataraxis-automation>=4,<5
-# Note, this stubgen command is different from other reference implementations due to pynput importing not working
-# properly in headless mode. xvfb starts a virtual x-server to make pynput import work as expected for documentation
-# purposes.
-allowlist_externals:
-    xvfb-run
 depends = lint
 commands =
     automation-cli process-typed-markers
-    xvfb-run stubgen -o stubs --include-private --include-docstrings -p sl_experiment -v
+    stubgen -o stubs --include-private --include-docstrings -p sl_behavior -v
     automation-cli process-stubs
     ruff check --select I --fix
     ruff format
@@ -123,7 +114,7 @@ deps =
     ataraxis-automation>=4,<5
 commands =
     automation-cli generate-recipe-folder
-    grayskull pypi sl-mesoscope -o recipe --strict-conda-forge --list-missing-deps -m Inkaros
+    grayskull pypi sl-behavior -o recipe --strict-conda-forge --list-missing-deps -m Inkaros
 
 [testenv:install]
 skip_install = true
@@ -132,14 +123,12 @@ deps =
 depends =
     lint
     stubs
-    {py311, py312, py313}-test
-    coverage
     docs
 description =
     Builds and installs the project into the specified conda environment. If the environment does not exist, creates
     it before installing the project.
 commands =
-    automation-cli install-project --environment-name sle_dev
+    automation-cli install-project --environment-name slb_dev
 
 [testenv:uninstall]
 skip_install = true
@@ -149,7 +138,7 @@ description =
     Uninstalls the project from the specified conda environment. If the environment does not exist
     this task silently succeeds.
 commands =
-    automation-cli uninstall-project --environment-name sle_dev
+    automation-cli uninstall-project --environment-name slb_dev
 
 [testenv:create]
 skip_install = true
@@ -159,7 +148,7 @@ description =
     Creates a minimally-configured conda environment using the requested python version and installs conda- and pip-
     dependencies extracted from pyproject.toml file into the environment. Does not install the project!
 commands =
-    automation-cli create-env --environment-name sle_dev --python-version 3.11
+    automation-cli create-env --environment-name slb_dev --python-version 3.11
 
 [testenv:remove]
 skip_install = true
@@ -168,7 +157,7 @@ deps =
 description =
     Removes the requested conda environment, if it is installed locally.
 commands =
-    automation-cli remove-env --environment-name sle_dev
+    automation-cli remove-env --environment-name slb_dev
 
 [testenv:provision]
 skip_install = true
@@ -178,7 +167,7 @@ description =
     Provisions an already existing environment by uninstalling all packages from the environment and then installing the
     project dependencies using pyproject.toml specifications.
 commands =
-    automation-cli provision-env --environment-name sle_dev --python-version 3.11
+    automation-cli provision-env --environment-name slb_dev --python-version 3.11
 
 [testenv:export]
 skip_install = true
@@ -187,7 +176,7 @@ deps =
 description =
     Exports the requested conda environment to the 'envs' folder as a .yml file and as a spec.txt with revision history.
 commands =
-    automation-cli export-env --environment-name sle_dev
+    automation-cli export-env --environment-name slb_dev
 
 [testenv:import]
 skip_install = true
@@ -197,7 +186,7 @@ description =
     Discovers and imports (installs) a new or updates an already existing environment using the .yml file
     stored in the 'envs' directory.
 commands =
-    automation-cli import-env --environment-name sle_dev
+    automation-cli import-env --environment-name slb_dev
 
 [testenv:rename]
 skip_install = true
@@ -207,12 +196,3 @@ description =
     Replaces the base environment name used by all files inside the 'envs' directory with the user-input name.
 commands =
     automation-cli rename-environments
-
-[testenv:adopt]
-skip_install = true
-deps =
-    ataraxis-automation>=4,<5
-description =
-    Adopts a Sun Lab template-generated project by replacing default placeholders with user-provided information.
-commands =
-    automation-cli adopt-project
