--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "ataraxis-data-structures>=3.1.1,<4",
     "ataraxis-communication-interface>=3.1.0,<4",
     "ataraxis-video-system>=1.1.0,<2",
+    "sl-experiment>=1,<2",
     "tqdm>=4,<5",
     "xxhash>=3,<4",
     "polars>=1,<2",
