--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,17 @@ version = "1.0.0"
 description = "A Python library that provides tools for processing behavior data acquired in the Sun (NeuroAI) lab."
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.11, <3.12"  # Until AXVS supports 3.12+
+requires-python = ">=3.11, <3.13"  # Until AXVS and DLC support 3.12+
 authors = [
-    { name = "Ivan Kondratyev", email = "ik278@cornell.edu" },
+    {name = "Ivan Kondratyev"},
+    {name = "Kushaan Gupta"},
+    {name = "Natalie Yeung"}
 ]
 maintainers = [
     { name = "Ivan Kondratyev", email = "ik278@cornell.edu" },
 ]
 
-keywords = ["Sun", "behavior", "processing"]
+keywords = ["sunlab", "data", "behavior", "processing"]
 
 classifiers = [
     # Development status
@@ -48,13 +50,12 @@ dependencies = [
     "ataraxis-data-structures>=3.1.1,<4",
     "ataraxis-communication-interface>=3.1.0,<4",
     "ataraxis-video-system>=1.1.0,<2",
-    "sl-experiment>=1,<2",
-    "sl-shared-assets<=1.0.0rc14",
     "tqdm>=4,<5",
     "xxhash>=3,<4",
     "polars>=1,<2",
     "pyarrow>=20,<21",
     "appdirs>=1,<2",
+    "sl-shared-assets>=1,<2",
 ]
 
 [project.urls]
@@ -126,6 +127,9 @@ noconda = [
 
     # Automation
     "ataraxis-automation>=4,<5",
+
+    # Types:
+    "scipy-stubs>=1,<2",
 ]
 
 # A shorthand specification that installs tox and all packages required for development tasks. This specification can
