--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps =
     ataraxis-automation>=4,<5
     types-tqdm>=4,<5
     types-appdirs>=1,<2
+    scipy-stubs>=1,<2
 basepython = py311
 commands =
     automation-cli purge-stubs
