Rolled back pandas to polars swap
-- Due to a hierarchical nature of the GIMBL JSON file, there is no easy way to process the data with Polars.
-- Began refactoring docstrings and function names in the 'parse' module of 'legacy' package
-- Optimized project dependency and dependency installation sources.
-- Temporarily removed 'legacy' package default exports.

--- a/tox.ini
+++ b/tox.ini
@@ -30,8 +30,8 @@ deps =
     ruff>=0,<1
     ataraxis-automation>=4,<5
     types-tqdm>=4,<5
-    types-appdirs>=1,<2
     scipy-stubs>=1,<2
+    pandas-stubs>=2,<3
 basepython = py311
 commands =
     automation-cli purge-stubs
