--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,18 +43,14 @@ classifiers = [
 dependencies = [
     "click>=8,<9",
     "numpy>=2,<3",
-    "numba>=0,<1",
     "scipy>=1,<2",
     "ataraxis-base-utilities>=3,<4",
     "ataraxis-transport-layer-pc>=1,<2",
-    "ataraxis-data-structures>=3.1.1,<4",
     "ataraxis-communication-interface>=3.1.0,<4",
     "ataraxis-video-system>=1.1.0,<2",
     "tqdm>=4,<5",
-    "xxhash>=3,<4",
-    "polars>=1,<2",
+    "pandas>=2,<3",
     "pyarrow>=20,<21",
-    "appdirs>=1,<2",
     "sl-shared-assets>=1,<2",
 ]
 
@@ -71,18 +67,11 @@ Documentation = "https://sl-behavior-api-docs.netlify.app/"
 # project dependencies with conda over pip as possible.
 condarun = [
     "numpy>=2,<3",
-    "numba>=0,<1",
     "scipy>=1,<2",
     "tqdm>=4,<5",
-    "matplotlib>=3,<4",
-    "zaber-motion>=7,<8",
-    "tabulate>=0,<1",
     "click>=8,<9",
-    "google-api-python-client>=2,<3",
-    "polars>=1,<2",
+    "pandas>=2,<3",
     "pyarrow>=20,<21",
-    "pynput>=1,<2",
-    "appdirs>=1,<2",
 ]
 
 # Dependencies known to be installable with conda for all development platforms (OSX ARM64, WIN AMD64, LIN AMD64).
@@ -106,9 +95,9 @@ conda = [
     "grayskull>=2,<3",
 
     # Types:
-    "types-appdirs>=1,<2",
     "types-tqdm>=4,<5",
-
+    "pandas-stubs>=2,<3",
+    "scipy-stubs>=1,<2",
 ]
 
 # Dependencies known to not be installable with conda for at least one supported development platform
@@ -127,9 +116,6 @@ noconda = [
 
     # Automation
     "ataraxis-automation>=4,<5",
-
-    # Types:
-    "scipy-stubs>=1,<2",
 ]
 
 # A shorthand specification that installs tox and all packages required for development tasks. This specification can
