--- a/tox.ini
+++ b/tox.ini
@@ -26,9 +26,9 @@ description =
     Runs static code formatting, style and typing checkers. Mypy may not work properly until py.typed marker is
     added by 'stubs' task.
 deps =
-    mypy>=1,<2
+    mypy[faster-cache]>=1,<2
     ruff>=0,<1
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
     types-tqdm>=4,<5
     scipy-stubs>=1,<2
     pandas-stubs>=2,<3
@@ -46,9 +46,9 @@ description =
     Generates the py.typed marker and the stub files using the built library wheel. Formats the stubs with ruff before
     moving them to appropriate source sub-directories.
 deps =
-    mypy>=1,<2
+    mypy[faster-cache]>=1,<2
     ruff>=0,<1
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 depends = lint
 commands =
     automation-cli process-typed-markers
@@ -94,7 +94,7 @@ description =
     Uses API token stored in '.pypirc' file or provided by user to authenticate the upload.
 deps =
     twine>=6,<7
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 allowlist_externals =
     distutils
 commands =
@@ -112,7 +112,7 @@ description =
     https://conda-forge.org/docs/maintainer/adding_pkgs/ for more details.
 deps =
     grayskull>=2,<3
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 commands =
     automation-cli generate-recipe-folder
     grayskull pypi sl-behavior -o recipe --strict-conda-forge --list-missing-deps -m Inkaros
@@ -120,7 +120,7 @@ commands =
 [testenv:install]
 skip_install = true
 deps =
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 depends =
     lint
     stubs
@@ -134,7 +134,7 @@ commands =
 [testenv:uninstall]
 skip_install = true
 deps =
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 description =
     Uninstalls the project from the specified conda environment. If the environment does not exist
     this task silently succeeds.
@@ -144,7 +144,7 @@ commands =
 [testenv:create]
 skip_install = true
 deps =
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 description =
     Creates a minimally-configured conda environment using the requested python version and installs conda- and pip-
     dependencies extracted from pyproject.toml file into the environment. Does not install the project!
@@ -154,7 +154,7 @@ commands =
 [testenv:remove]
 skip_install = true
 deps =
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 description =
     Removes the requested conda environment, if it is installed locally.
 commands =
@@ -163,7 +163,7 @@ commands =
 [testenv:provision]
 skip_install = true
 deps =
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 description =
     Provisions an already existing environment by uninstalling all packages from the environment and then installing the
     project dependencies using pyproject.toml specifications.
@@ -173,7 +173,7 @@ commands =
 [testenv:export]
 skip_install = true
 deps =
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 description =
     Exports the requested conda environment to the 'envs' folder as a .yml file and as a spec.txt with revision history.
 commands =
@@ -182,7 +182,7 @@ commands =
 [testenv:import]
 skip_install = true
 deps =
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 description =
     Discovers and imports (installs) a new or updates an already existing environment using the .yml file
     stored in the 'envs' directory.
@@ -192,7 +192,7 @@ commands =
 [testenv:rename]
 skip_install = true
 deps =
-    ataraxis-automation>=4,<5
+    ataraxis-automation>=5,<6
 description =
     Replaces the base environment name used by all files inside the 'envs' directory with the user-input name.
 commands =
