--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ dependencies = [
     "pandas>=2,<3",
     "polars>=1,<2",
     "pyarrow>=20,<21",
-    "sl-shared-assets>=1.1.2,<2",
+    "sl-shared-assets==1.2.0rc1",
 ]
 
 [project.urls]
