--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
     "click==8.2.1",
     "numpy==2.2.6",
     "numba==0.61.2",
-#    "intel-cmplr-lib-rt==2025.1.1",
+    "intel-cmplr-lib-rt==2025.1.1",
     "scipy==1.16.0",
     "ataraxis-base-utilities==3.1.0",
     "ataraxis-data-structures==3.1.1",
