--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@
 # specifier.
 [tox]
 requires =
-    tox-uv>=1,<2
-    tox>=4,<5
+    tox==4.28.4
+    tox-uv==1.26.2
 envlist =
     lint
     stubs
@@ -26,12 +26,12 @@ description =
     Runs static code formatting, style and typing checkers. Mypy may not work properly until py.typed marker is
     added by 'stubs' task.
 deps =
-    mypy[faster-cache]>=1,<2
-    ruff>=0,<1
-    ataraxis-automation>=5,<6
-    types-tqdm>=4,<5
-    scipy-stubs>=1,<2
-    pandas-stubs>=2,<3
+    mypy[faster-cache]==1.17.1
+    ruff==0.12.7
+    ataraxis-automation==5.0.0
+    types-tqdm==4.67.0.20250516
+    pandas-stubs==2.3.0.250703
+    scipy-stubs==1.16.1.0
 basepython = py311
 commands =
     automation-cli purge-stubs
@@ -46,9 +46,9 @@ description =
     Generates the py.typed marker and the stub files using the built library wheel. Formats the stubs with ruff before
     moving them to appropriate source sub-directories.
 deps =
-    mypy[faster-cache]>=1,<2
-    ruff>=0,<1
-    ataraxis-automation>=5,<6
+    mypy[faster-cache]==1.17.1
+    ruff==0.12.7
+    ataraxis-automation==5.0.0
 depends = lint
 commands =
     automation-cli process-typed-markers
@@ -63,12 +63,12 @@ description =
     Builds the API documentation from source code docstrings using Sphinx. The result can be viewed by loading
     'docs/build/html/index.html'.
 deps =
-    sphinx>=8,<9
-    importlib_metadata>=8,<9
-    sphinx-rtd-theme>=3,<4
-    sphinx-click>=6,<7
-    sphinx-autodoc-typehints>=3,<4
-    sphinx-rtd-dark-mode>=1,<2
+    sphinx==8.2.3
+    importlib_metadata==8.7.0
+    sphinx-rtd-theme==3.0.2
+    sphinx-click==6.0.0
+    sphinx-autodoc-typehints==3.2.0
+    sphinx-rtd-dark-mode==1.3.0
 commands =
     sphinx-build -b html -d docs/build/doctrees docs/source docs/build/html -j auto -v
 
@@ -78,8 +78,8 @@ description =
     Builds the source code distribution (sdist) and the binary distribution package (wheel). Use 'upload' task to
     subsequently upload built wheels to PyPI.
 deps =
-    build>=1,<2
-    hatchling>=1,<2
+    build==1.3.0
+    hatchling==1.27.0
 allowlist_externals =
     docker
 commands =
@@ -93,34 +93,18 @@ description =
     Uses twine to upload all files inside the '/dist' folder to PyPI, ignoring any files that are already uploaded.
     Uses API token stored in '.pypirc' file or provided by user to authenticate the upload.
 deps =
-    twine>=6,<7
-    ataraxis-automation>=5,<6
+    twine==6.1.0
+    ataraxis-automation==5.0.0
 allowlist_externals =
     distutils
 commands =
     automation-cli acquire-pypi-token {posargs:}
     twine upload dist/* --skip-existing --config-file .pypirc
 
-# Note: This task automatically uses the latest version of the package uploaded to PyPI and expects it to contain
-# sdist archive. Ideally, it should be used together with the build and twine tasks, as that would ensure the recipe
-# always matches the latest distributed code version.
-[testenv:recipe]
-skip_install = true
-description =
-    Uses grayskull to parse the source code tarball stored on PyPI and generate the recipe used to submit the
-    package to conda-forge. The submission process has to be carried out manually, see
-    https://conda-forge.org/docs/maintainer/adding_pkgs/ for more details.
-deps =
-    grayskull>=2,<3
-    ataraxis-automation>=5,<6
-commands =
-    automation-cli generate-recipe-folder
-    grayskull pypi sl-behavior -o recipe --strict-conda-forge --list-missing-deps -m Inkaros
-
 [testenv:install]
 skip_install = true
 deps =
-    ataraxis-automation>=5,<6
+    ataraxis-automation==5.0.0
 depends =
     lint
     stubs
@@ -134,7 +118,7 @@ commands =
 [testenv:uninstall]
 skip_install = true
 deps =
-    ataraxis-automation>=5,<6
+    ataraxis-automation==5.0.0
 description =
     Uninstalls the project from the specified conda environment. If the environment does not exist
     this task silently succeeds.
@@ -144,7 +128,7 @@ commands =
 [testenv:create]
 skip_install = true
 deps =
-    ataraxis-automation>=5,<6
+    ataraxis-automation==5.0.0
 description =
     Creates a minimally-configured conda environment using the requested python version and installs conda- and pip-
     dependencies extracted from pyproject.toml file into the environment. Does not install the project!
@@ -154,7 +138,7 @@ commands =
 [testenv:remove]
 skip_install = true
 deps =
-    ataraxis-automation>=5,<6
+    ataraxis-automation==5.0.0
 description =
     Removes the requested conda environment, if it is installed locally.
 commands =
@@ -163,7 +147,7 @@ commands =
 [testenv:provision]
 skip_install = true
 deps =
-    ataraxis-automation>=5,<6
+    ataraxis-automation==5.0.0
 description =
     Provisions an already existing environment by uninstalling all packages from the environment and then installing the
     project dependencies using pyproject.toml specifications.
@@ -173,7 +157,7 @@ commands =
 [testenv:export]
 skip_install = true
 deps =
-    ataraxis-automation>=5,<6
+    ataraxis-automation==5.0.0
 description =
     Exports the requested conda environment to the 'envs' folder as a .yml file and as a spec.txt with revision history.
 commands =
@@ -182,7 +166,7 @@ commands =
 [testenv:import]
 skip_install = true
 deps =
-    ataraxis-automation>=5,<6
+    ataraxis-automation==5.0.0
 description =
     Discovers and imports (installs) a new or updates an already existing environment using the .yml file
     stored in the 'envs' directory.
@@ -192,7 +176,7 @@ commands =
 [testenv:rename]
 skip_install = true
 deps =
-    ataraxis-automation>=5,<6
+    ataraxis-automation==5.0.0
 description =
     Replaces the base environment name used by all files inside the 'envs' directory with the user-input name.
 commands =
