--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
-# Defines the build system used for the project. For pure-python projects, uses the hatchling build system, which is
-# used internally by scikit-build for our C-extension projects. Therefore, there is clear continuity between our
-# c-extension and pure-python projects.
+# Defines the build system used for the project.
 [build-system]
-requires = ["hatchling>=1,<2"]
+requires = ["hatchling==1.27.0"]
 build-backend = "hatchling.build"
 
 # Project metdata section. Provides the genral ID information about the project.
 [project]
 name = "sl-behavior"
-version = "3.0.0"
+version = "4.0.0"
 description = "Provides tools for processing non-visual behavior data acquired in the Sun (NeuroAI) lab."
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.11, <3.12"  # Until AXVS supports 3.12+
+requires-python = ">=3.13, <3.14"
 authors = [
     {name = "Ivan Kondratyev"},
     {name = "Kushaan Gupta"},
@@ -28,108 +26,53 @@ classifiers = [
     # Development status
     "Development Status :: 5 - Production/Stable",
     # Intended audience and project topic
-    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering",
     # License
     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
     # Supported Python Versions
-    "Programming Language :: Python :: 3.11",
-    # "Programming Language :: Python :: 3.12",
-    # "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.13",
     # Supported OS systems
     "Operating System :: POSIX :: Linux",
+    # Typing
+    "Typing :: Typed"
 ]
 
-# Runtime project dependencies. This overlaps with the 'condarun' optional list.
+# Runtime project dependencies.
 dependencies = [
-    "click==8.2.1",
-    "numpy==2.2.6",
-    "numba==0.61.2",
-    "intel-cmplr-lib-rt==2025.2.0",
-    "scipy==1.16.1",
-    "ataraxis-base-utilities==3.1.0",
-    "ataraxis-data-structures==3.1.1",
-    "ataraxis-video-system==1.1.0",
-    "ataraxis-communication-interface==3.2.1",
-    "tqdm==4.67.1",
-    "pandas==2.3.1",
-    "polars==1.32.0",
-    "pyarrow==21.0.0",
-    "sl-shared-assets==4.0.1",
+    "click>=8,<9",
+    "numpy>=2,<3",
+    "numba>=0,<1",
+    "intel-cmplr-lib-rt>=2025,<2026; platform_machine == 'x86_64'",
+    "ataraxis-base-utilities>=3,<4",
+    "ataraxis-communication-interface>=3,<4",
+    "tqdm>=4,<5",
+    "polars>=1,<2",
+    "pyarrow>=21,<22",
+    "sl-shared-assets>=5,<6",
 ]
 
 [project.urls]
 Homepage = "https://github.com/Sun-Lab-NBB/sl-behavior"
 Documentation = "https://sl-behavior-api-docs.netlify.app/"
 
-# Specifies additional dependencies that can be installed alongside the main library. Also, this is the section that
-# stores conda, condarun, and noconda lists that facilitate setting up dependencies via conda where possible.
+# Specifies additional dependencies that can be installed alongside the main library.
 [project.optional-dependencies]
 
-# Runtime dependencies known to be installable with conda for all development platforms
-# (OSX ARM64, WIN AMD64, LIN AMD64). This specification is used by ataraxis-automation to resolve as many
-# project dependencies with conda over pip as possible.
-condarun = [
-    "click==8.2.1",
-    "numpy==2.2.6",
-    "numba==0.61.2",
-    "intel-cmplr-lib-rt==2025.2.0",
-    "tqdm==4.67.1",
-    "pandas==2.3.1",
-    "polars==1.32.0",
-    "pyarrow==21.0.0",
-]
-
-# Dependencies known to be installable with conda for all development platforms (OSX ARM64, WIN AMD64, LIN AMD64).
-conda = [
-    # Tox
-    "tox==4.28.4",
-    "tox-uv==1.26.2",
-    "uv==0.8.5",
-
-    # Documentation
-    "sphinx==8.2.3",
-    "importlib_metadata==8.7.0",
-    "sphinx-click==6.0.0",
-    "sphinx-autodoc-typehints==3.2.0",
-
-    # Linting and Stub-generation
-    "mypy==1.17.1",
-    "ruff==0.12.7",
-
-    # Building
-    "hatchling==1.27.0",
-
-    # Distribution
-    "twine==6.1.0",
-
-    # Types:
-    "types-tqdm==4.67.0.20250516",
-    "pandas-stubs==2.3.0.250703",
-]
-
-# Dependencies known to not be installable with conda for at least one supported development platform
-# (OSX ARM64, WIN AMD64, LIN AMD64).
-noconda = [
-    # Documentation
-    "sphinx-rtd-dark-mode==1.3.0",
-    "sphinx-rtd-theme==3.0.2",
-
-    # Types:
-    "scipy-stubs==1.16.1.0",
-
-    # Building
-    "build==1.3.0",
-
-    # Automation
-    "ataraxis-automation==5.0.0",
-]
-
-# A shorthand specification that installs tox and all packages required for development tasks. This specification can
-# be used by developers to quickly install all necessary components for working on this project. Has to be installed
-# from pip.
+# Dependencies that support developing this project.
 dev = [
-    "sl-behavior[conda]",
-    "sl-behavior[noconda]"
+    # Tox
+    "tox>=4,<5",
+    "uv>=0,<1",
+    "tox-uv>=1,<2",
+
+    # Development Automation
+    "ataraxis-automation>=6.0.1,<7",
+
+    # Types:
+    "types-tqdm>=4,<5",
+    "pandas-stubs>=2,<3",
+    "scipy-stubs>=1,<2",
 ]
 
 # Exports CLIs for processing behavior data
@@ -148,7 +91,7 @@ packages = ["src/sl_behavior", "examples"]
 [tool.ruff]
 line-length = 120         # The maximum column length is set to 120 for this project.
 indent-width = 4          # Same as black, indents are 4 spaces
-target-version = "py311"  # Targets the lowest supported version of python
+target-version = "py313"  # Targets the lowest supported version of python
 src = ["src"]             # The name of the source directory
 
 # Excludes 'service' .py files, such as the sphinx configuration file, from linting.
