--- a/envs/slb_dev_lin.yml
+++ b/envs/slb_dev_lin.yml
@@ -27,19 +27,19 @@ dependencies:
   - openssl=3.5.2=h26f9b46_0
   - packaging=25.0=pyh29332c3_1
   - pip=25.2=pyh145f28c_0
-  - platformdirs=4.3.8=pyhe01879c_0
+  - platformdirs=4.4.0=pyhcf101f3_0
   - pluggy=1.6.0=pyhd8ed1ab_0
   - pyproject-api=1.9.1=pyhe01879c_0
-  - python=3.13.5=hec9711d_102_cp313
-  - python-uv=0.8.13=pyhcf101f3_0
+  - python=3.13.7=h2b335a9_100_cp313
+  - python-uv=0.8.15=pyhcf101f3_0
   - python_abi=3.13=8_cp313
   - readline=8.2=h8c095d6_2
   - tk=8.6.13=noxft_hd72426e_102
   - tomli=2.2.1=pyhe01879c_2
-  - tox=4.28.4=pyhe01879c_0
+  - tox=4.30.1=pyhcf101f3_0
   - tox-uv=1.28.0=pyhd8ed1ab_0
-  - typing_extensions=4.14.1=pyhe01879c_0
+  - typing_extensions=4.15.0=pyhcf101f3_0
   - tzdata=2025b=h78e105d_0
-  - uv=0.8.13=heb9285d_0
+  - uv=0.8.15=h2f8d451_0
   - virtualenv=20.34.0=pyhd8ed1ab_0
 
