Finalized processing modernization
-- Refactored camera processing to use the assets from the ataraxis-video-system.
-- Refactored microcontroller processing to use the assets from ataraxis-communication-interface.
-- Added dependencies on ataraxis-video-system, ataraxis-communication-interface, and sl-forgery.
-- Refactored the library to use the tracker filenames from the sl-forgery (and the interpolate_data function).
-- Updated the ReadMe to use the modern Sun lab standard.
-- Streamlined all source code and API documentation
-- Adjusted the processing CLi to limit processing to known camera and microcontroller IDs
-- Deprecated the legacy brake semantics that featured a typo (brake -> break) in a backward-compatible fashion
-- Renamed camera 62 from 'left' to 'body'.

--- a/tox.ini
+++ b/tox.ini
@@ -61,6 +61,7 @@ commands =
 description =
     Builds the API documentation from source code docstrings using Sphinx. The result can be viewed by loading
     'docs/build/html/index.html'.
+basepython = py314
 deps = ataraxis-automation==7.1.0
 depends =
     uninstall
