--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,11 +45,13 @@ dependencies = [
     "numba>=0.63.0rc1,<1",
     "intel-cmplr-lib-rt>=2025,<2026; sys_platform != 'darwin'",
     "ataraxis-base-utilities>=5,<6",
+    "ataraxis-video-system>=2,<3",
     "ataraxis-communication-interface>=4,<5",
     "tqdm>=4,<5",
     "polars>=1,<2",
     "pyarrow>=22,<23",
     "sl-shared-assets>=6.0.1rc9,<7",
+    "sl-forgery>=1.0.0rc2,<2",
 ]
 
 [project.urls]
