--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ classifiers = [
 dependencies = [
     "click>=8,<9",
     "numpy>=2,<3",
-    "numba>=0.63.0rc1,<1",
+    "numba>=0.63,<1",
     "intel-cmplr-lib-rt>=2025,<2026; sys_platform != 'darwin'",
     "ataraxis-base-utilities>=5,<6",
     "ataraxis-video-system>=2,<3",
@@ -50,8 +50,7 @@ dependencies = [
     "tqdm>=4,<5",
     "polars>=1,<2",
     "pyarrow>=22,<23",
-    "sl-shared-assets>=6.0.1rc9,<7",
-    "sl-forgery>=1.0.0rc2,<2",
+    "sl-shared-assets>=6.1.0",
 ]
 
 [project.urls]
