--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dependencies = [
     "tqdm>=4,<5",
     "polars>=1,<2",
     "pyarrow>=22,<23",
-    "sl-shared-assets>=6.1.0",
+    "sl-shared-assets>=6.1,<7",
 ]
 
 [project.urls]
