--- a/envs/slb_dev_lin.yml
+++ b/envs/slb_dev_lin.yml
@@ -11,6 +11,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_1
   - distlib=0.4.0=pyhd8ed1ab_0
   - filelock=3.20.1=pyhd8ed1ab_0
+  - icu=78.1=h33c6efd_0
   - ld_impl_linux-64=2.45=default_hbd61a6d_104
   - libexpat=2.7.3=hecca717_0
   - libffi=3.5.2=h9ec8514_0
@@ -18,9 +19,9 @@ dependencies:
   - libgomp=15.2.0=he0feb66_16
   - liblzma=5.8.1=hb9d3cd8_2
   - libmpdec=4.0.0=hb9d3cd8_0
-  - libsqlite=3.51.1=h0c1763c_0
+  - libsqlite=3.51.1=hf4e2dac_1
   - libstdcxx=15.2.0=h934c35e_16
-  - libuuid=2.41.2=h5347b49_1
+  - libuuid=2.41.3=h5347b49_0
   - libzlib=1.3.1=hb9d3cd8_2
   - ncurses=6.5=h2d0b736_3
   - openssl=3.6.0=h26f9b46_0
