--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@
 requires = ["hatchling>=1,<2"]
 build-backend = "hatchling.build"
 
-# Project metdata section. Provides the genral ID information about the project.
+# Project metadata section. Provides the general ID information about the project.
 [project]
 name = "sl-behavior"
-version = "4.0.1rc1"
+version = "4.1.0rc1"
 description = "Provides tools for processing non-visual behavior data acquired in the Sun (NeuroAI) lab."
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -51,6 +51,8 @@ dependencies = [
     "polars>=1,<2",
     "pyarrow>=22,<23",
     "sl-shared-assets>=7,<8",
+    "mcp>=1,<2",
+    "httpx>=0.27,<1",
 ]
 
 [project.urls]
@@ -76,7 +78,7 @@ dev = [
 
 # Exports the CLI for processing behavior data
 [project.scripts]
-sl-behavior = "sl_behavior.cli:behavior"
+sl-behavior = "sl_behavior.cli:cli"
 
 # Specifies files that should not be included in the source-code distribution but are also not part of gitignore.
 [tool.hatch.build.targets.sdist]
@@ -84,7 +86,7 @@ exclude = [".github", "recipe"]
 
 # Specifies the library structure.
 [tool.hatch.build.targets.wheel]
-packages = ["src/sl_behavior", "examples"]
+packages = ["src/sl_behavior"]
 
 # Ruff Configuration.
 [tool.ruff]
