Finalized version 4.1.0 and refactored MCP server job execution.
  -- Updated version from 4.1.0rc1 to 4.1.0 for release.
  -- Refactored MCP server to execute jobs sequentially with dedicated CPU allocation.
  -- Added per-job progress tracking with visual status indicators.
  -- Fixed platform dependency check to use platform_system instead of sys_platform.
  -- Added .mcp.json configuration for Claude Code integration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,15 @@ build-backend = "hatchling.build"
 # Project metadata section. Provides the general ID information about the project.
 [project]
 name = "sl-behavior"
-version = "4.1.0rc1"
+version = "4.1.0"
 description = "Provides tools for processing non-visual behavior data acquired in the Sun (NeuroAI) lab."
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.14,<3.15"
 authors = [
-    {name = "Ivan Kondratyev"},
-    {name = "Kushaan Gupta"},
-    {name = "Natalie Yeung"}
+    { name = "Ivan Kondratyev" },
+    { name = "Kushaan Gupta" },
+    { name = "Natalie Yeung" }
 ]
 maintainers = [
     { name = "Ivan Kondratyev", email = "ik278@cornell.edu" },
@@ -43,7 +43,7 @@ dependencies = [
     "click>=8,<9",
     "numpy>=2,<3",
     "numba>=0.63,<1",
-    "intel-cmplr-lib-rt>=2025,<2026; sys_platform != 'darwin'",
+    "intel-cmplr-lib-rt>=2025,<2026; platform_system != 'Darwin'",
     "ataraxis-base-utilities>=5,<6",
     "ataraxis-video-system>=2,<3",
     "ataraxis-communication-interface>=4,<5",
